# nsbox

./: .build.yml  .clang-format  .editorconfig  .firebaserc  .gitignore  .gn  BUILD.gn  README.md  Vagrantfile  firebase.json  go.mod  go.sum  groups  mock-f31-x64.cfg  mock-f32-x64.cfg  netlify.toml  nsbox.py  project.config
.github/: FUNDING.yml  lockdown.yml
.github/actions/rpm_spec_files/: Dockerfile  action.yaml  action.yml  entrypoint.sh
.github/workflows/: build_images.sh  build_images.yaml  rpm_spec_files.yaml  website.yaml
cmd/nsbox/: config.go  create.go  delete.go  images.go  info.go  kill.go  list.go  main.go  rename.go  run.go  set_default.go  version.go
cmd/nsbox-host/: enter.go  main.go  reload_exports.go  service.go  varlink_util.go
cmd/nsbox-invoker/: main.go
cmd/nsboxd/: main.go
data/: getty-override.conf  nsbox-container.target  nsbox-init.service  wants-networkd.conf
data/scripts/: nsbox-enter-run.sh  nsbox-enter-setup.sh  nsbox-init.sh
guest-tools/arch/: BUILD.gn  PKGBUILD  nsbox-trigger.hook
guest-tools/fedora/: BUILD.gn  nsbox-guest-tools.spec  nsbox_trigger.py
images/: BUILD.gn  images.gni
images/arch/: Dockerfile  metadata.json
images/arch/roles/main/files/: PKGBUILD  nsbox-trigger.hook
images/arch/roles/main/tasks/: build_guest_tools.yaml  main.yaml
images/arch/roles/main/vars/: guest_tools.yaml
images/debian/: Dockerfile  metadata.json
images/debian/roles/main/tasks/: main.yaml
images/fedora/: metadata.json  playbook.yaml
images/fedora/roles/main/files/: nsbox-guest-tools.spec  nsbox_trigger.py
images/fedora/roles/main/tasks/: build_guest_tools.yaml  main.yaml
images/fedora/roles/main/templates/: nsbox.repo
images/fedora/roles/main/vars/: guest_tools.yaml
internal/args/: args.go  array.go
internal/config/: host_config.template.go
internal/container/: container.go  info.go
internal/create/: create.go  image_scraper.go
internal/daemon/: direct.go  transient.go
internal/gtkicons/: gtkicons.go  nsbox-gtkicons.c  nsbox-gtkicons.h
internal/image/: image.go
internal/integration/: xdgdesktop.go
internal/inventory/: inventory.go
internal/kill/: kill.go
internal/log/: log.go
internal/network/: firewalld.go  network.go
internal/nsbus/: nsbus.go
internal/nspawn/: builder.go
internal/paths/: host_paths.template.go  paths.go
internal/ptyservice/: client.go  service.go
internal/release/: release.go
internal/run/: direct.go  enter.go  transient.go
internal/selinux/: selinux.go
internal/session/: enter.go  enter_nsenter.go  enter_systemd.go  nsbox-ptyfwd.c  nsbox-ptyfwd.h  setup.go
internal/transport/: transport.go
internal/userdata/: check_privs.go  userdata.go
internal/varlink/: dev.nsbox.varlink  stub.go
internal/varlinkhost/: varlinkhost.go
internal/webutil/: download.go  extract.go
misc/: dev.nsbox.policy  dev.nsbox.rules  profile.d-nsbox.sh
packaging/fedora/: BUILD.gn  nsbox.spec
scripts/: nsbox-apply-env.sh  nsbox-enter-run.sh  nsbox-enter-setup.sh  nsbox-enter.sh  nsbox-init.sh
sepolicy/: BUILD.gn  nsbox.fc  nsbox.te
tests/: main.exp  tests.exp
tests/playbooks/: fedora.yaml
utils/: nsbox-bender.py
web/: README.md  build.md  faq.md  guide.md  images.md  package.json  recipes.md
web/.vuepress/: config.js
web/.vuepress/theme/components/: Home.vue  NavLinks.vue  Navbar.vue  PageEdit.vue  Sidebar.vue  SidebarGroup.vue  SidebarLink.vue  SidebarLinks.vue
web/.vuepress/theme/styles/: code.styl  config.styl  custom-blocks.styl  index.styl  mobile.styl  palette.styl
