common_image_files = [
  "metadata.json",
  "playbook.yaml",
  "roles/main/tasks/main.yaml",
]

common_local_image_files = [
  "Dockerfile"
]

image_definitions = [
  {
    name = "fedora"
    versions = ["32", "33"]
    extra_image_files = [
      "roles/main/files/nsbox_trigger.py",
      "roles/main/files/nsbox-guest-tools.spec",
      "roles/main/tasks/build_guest_tools.yaml",
      "roles/main/vars/guest_tools.yaml",
    ]
  },
  {
    name = "debian"
    local = true
    versions = ["buster"]
  },
  {
    name = "arch"
    local = true
    extra_image_files = [
      "roles/main/files/nsbox-trigger.hook",
      "roles/main/files/PKGBUILD",
      "roles/main/tasks/build_guest_tools.yaml",
      "roles/main/vars/guest_tools.yaml",
    ]
  }
]
