# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

import("//build/rpmbuild.gni")
import("//build/symlink.gni")

rpmbuild("fedora_rpm") {
  package_name = "nsbox-guest-tools"
  # Make sure you update in nsbox-guest-tools.spec as well!
  version = "0.1"
  release = "1"

  spec = "nsbox-guest-tools.spec"
  sources = ["nsbox_trigger.py"]
}

copy("fedora_rpm_install") {
  sources = get_target_outputs(":fedora_rpm")
  outputs = ["$root_build_dir/rpm/{{source_file_part}}"]
  deps = [":fedora_rpm"]
}

group("fedora") {
  deps = [":fedora_rpm_install"]
}
