# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

import("//build/copy_target_outputs.gni")
import("//build/rpmbuild.gni")
import("//build/substitute_file.gni")
import("//build/symlink.gni")

substitute_file("nsbox-guest-tools.spec") {
  source = "nsbox-guest-tools.spec"
  vars = [
    ["VERSION", release_version],
    ["COMMIT", release_commit],
  ]
}

rpmbuild("rpm") {
  package_name = "nsbox-guest-tools"
  noarch = true
  version = release_version
  release = "1"

  substituted_spec = get_target_outputs(":nsbox-guest-tools.spec")
  spec = substituted_spec[0]
  sources = ["nsbox_trigger.py"]
  deps = [":nsbox-guest-tools.spec"]
}

copy_target_outputs("install") {
  deps = [":rpm", ":nsbox-guest-tools.spec"]
  outputs = ["$root_build_dir/rpm/{{source_file_part}}"]
}

group("fedora") {
  deps = [":install"]
}
